# lp_morph

./: .gitignore  CMakeLists.txt  README.md  Thumbs.db  dbg.py  levinson.py  levinson2.py  lpmorph.jucer  prototype.py  simulate.py
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: ParameterHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  logdbg.h  lpc.cpp  lpc.h
dbg/: iir_plot.py  main.py
dbg/utils/: alphas_plot.py  iir_ringbuf.py  lpc.py
plugin/: CMakeLists.txt
plugin/dbg/: audio_log.csv  levinson_durbin.py  lpc_debug.cpp  lpc_debug.h  lpc_sine_dbg  lpc_sine_dbg.cpp  lpc_sine_dbg.py  plotaudio.py  print_audio.py
plugin/dbg/juceplayer/: PlayingSoundFilesTutorial.jucer
plugin/dbg/juceplayer/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
plugin/dbg/juceplayer/Source/: PlayingSoundFilesTutorial_01.h
plugin/dbg/utils/: alphas_plot.py  lpc.py  plotsine.py
plugin/libs/: agc.h  compile.txt  lpc.cpp  lpc.h  lpc_realtime_test  lpc_realtime_test.cpp  lpc_test  lpc_test.cpp  sampler.cpp  sampler.h
plugin/resources/: generate_green_noise.py  normalise.py
plugin/src/: AudioLogger.cpp  AudioLogger.h  ColorScheme.h  ParameterHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
resources/excitations/: normalise.py
